update null checker